--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,17 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <!-- styles css -->
     <link rel="stylesheet" href="/assets/css/style.css">
+    <!-- Font google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Sen:wght@400;700&display=swap"
+        rel="stylesheet">
+        
     <title>Project 2</title>
 </head>
+
 <body>
-    <h1>test</h1>
-    <!-- hello -->
+    <!-- Header -->
 </body>
+
 </html>
