--- a/index.html
+++ b/index.html
@@ -14,12 +14,67 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Sen:wght@400;700&display=swap"
         rel="stylesheet">
-        
+
     <title>Project 2</title>
 </head>
 
 <body>
     <!-- Header -->
+    <main style="height: 600px;">
+        <!-- Header -->
+        <div class="header fixed">
+            <div class="main-content">
+                <div class="body">
+                    <!-- Logo -->
+                    <img src="assets/img/logo.svg" class="logo" alt="Lesson.">
+
+                    <!-- Nav -->
+                    <nav class="nav">
+                        <ul>
+                            <li class="active"><a href="#!">Home</a></li>
+                            <li><a href="#!">Courses</a></li>
+                            <li><a href="#!">Pricing</a></li>
+                            <li><a href="#!">Reviews</a></li>
+                        </ul>
+                    </nav>
+
+                    <!-- actions -->
+                    <div class="action">
+                        <a href="#!" class="btn sign-up-btn">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Hero -->
+        <div class="hero">
+            <div class="main-content">
+                <div class="body">
+                    <!-- media -->
+                    <div class="media-block">
+                        <img src="" class="img" alt="">
+
+                        <div class="hero-sumary">
+                            <div class="item">
+                                <div class="icon">
+                                    <img src="" alt="">
+                                </div>
+
+                                <div class="info">
+                                    <div class="label"></div>
+                                    <div class="title"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- content -->
+                    <div class="content-block">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
