--- a/index.html
+++ b/index.html
@@ -50,26 +50,149 @@
         <div class="hero">
             <div class="main-content">
                 <div class="body">
-                    <!-- media -->
+                    <!-- hero left -->
                     <div class="media-block">
-                        <img src="" class="img" alt="">
-
+                        <img src="assets/img/img-media.jpg" class="img" alt="">
                         <div class="hero-sumary">
                             <div class="item">
                                 <div class="icon">
-                                    <img src="" alt="">
+                                    <img src="assets/icon/Orion_page.svg" alt="">
                                 </div>
 
                                 <div class="info">
-                                    <div class="label"></div>
-                                    <div class="title"></div>
+                                    <p class="label">20 Courses</p>
+                                    <p class="title">UI/UX Design</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="icon">
+                                    <img src="assets/icon/Orion_code-window.svg" alt="">
+                                </div>
+
+                                <div class="info">
+                                    <p class="label">20 Courses</p>
+                                    <p class="title">Development</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="icon">
+                                    <img src="assets/icon/Orion_megaphone.svg" alt="">
+                                </div>
+
+                                <div class="info">
+                                    <p class="label">30 Courses</p>
+                                    <p class="title">Marketing</p>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <!-- content -->
+                    <!-- Hero right -->
                     <div class="content-block">
+                        <h1 class="heading lv1">Learn without limits and spread knowledge.</h1>
+                        <p class="desc">Build new skills for that “this is my year” feeling with courses, certificates,
+                            and degrees from world-class universities and companies.</p>
+
+                        <div class="cta-group">
+                            <a href="" class="btn hero-cta">See Courses</a>
+                            <button class="watch-video">
+                                <div class="icon">
+                                    <img src="assets/icon/Polygon 2.svg" alt="">
+                                </div>
+                                <span>Watch Video</span>
+                            </button>
+                        </div>
+                        <p class="desc">Recent engagement</p>
+                        <p class="desc stats">
+                            <strong>50K</strong> Students
+                            <strong>70+</strong> Courses
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- popular -->
+        <div class="popular">
+            <div class="main-content">
+                <div class="popular-top">
+                    <div class="info">
+                        <h2 class="heading lv2">Our popular courses</h2>
+                        <p class="desc">Build new skills with new trendy courses and shine for the next future career.
+                        </p>
+                    </div>
+
+                    <div class="controls">
+                        <button class="controls-btn">
+                            <svg width="8" height="14" viewBox="0 0 8 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7 1L1 7L7 13" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </button>
+                        <button class="controls-btn">
+                            <svg width="8" height="14" viewBox="0 0 8 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 1L7 7L1 13" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+
+                        </button>
+                    </div>
+                </div>
+
+                <!-- cousers -->
+                <div class="card">
+                    <div class="card-item">
+                        <img src="assets/img/card1.svg" alt="" class="thumb">
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">Basic web design</h3>
+                                <div class="rating">
+                                    <img src="assets/img/Star.svg" alt="" class="start">
+                                    <span class="value">4.5</span>
+                                </div>
+                                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                                <div class="foot">
+                                    <span class="price">$120.75</span>
+                                    <button class="btn">Book Now</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-item">
+                        <img src="assets/img/card1.svg" alt="" class="thumb">
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">Basic web design</h3>
+                                <div class="rating">
+                                    <img src="assets/img/Star.svg" alt="" class="start">
+                                    <span class="value">4.5</span>
+                                </div>
+                                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                                <div class="foot">
+                                    <span class="price">$120.75</span>
+                                    <button class="btn">Book Now</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-item">
+                        <img src="assets/img/card1.svg" alt="" class="thumb">
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">Basic web design</h3>
+                                <div class="rating">
+                                    <img src="assets/img/Star.svg" alt="" class="start">
+                                    <span class="value">4.5</span>
+                                </div>
+                                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                                <div class="foot">
+                                    <span class="price">$120.75</span>
+                                    <button class="btn">Book Now</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
