--- a/index.html
+++ b/index.html
@@ -144,53 +144,53 @@
                 <!-- cousers -->
                 <div class="card">
                     <div class="card-item">
-                        <img src="assets/img/card1.svg" alt="" class="thumb">
+                        <a href=""><img src="assets/img/card1.svg" alt="" class="thumb"></a>
                         <div class="info">
                             <div class="head">
-                                <h3 class="title">Basic web design</h3>
+                                <h3 class="title lineclamp break-all">Basic web design</h3>
                                 <div class="rating">
                                     <img src="assets/img/Star.svg" alt="" class="start">
                                     <span class="value">4.5</span>
                                 </div>
-                                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
-                                <div class="foot">
-                                    <span class="price">$120.75</span>
-                                    <button class="btn">Book Now</button>
-                                </div>
+                            </div>
+                            <p class="desc lineclamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
+                            <div class="foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn book-btn">Book Now</button>
                             </div>
                         </div>
                     </div>
                     <div class="card-item">
-                        <img src="assets/img/card1.svg" alt="" class="thumb">
+                        <a href=""><img src="assets/img/card2.svg" alt="" class="thumb"></a>
                         <div class="info">
                             <div class="head">
-                                <h3 class="title">Basic web design</h3>
+                                <h3 class="title lineclamp break-all">UI/UX design</h3>
                                 <div class="rating">
                                     <img src="assets/img/Star.svg" alt="" class="start">
                                     <span class="value">4.5</span>
                                 </div>
-                                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
-                                <div class="foot">
-                                    <span class="price">$120.75</span>
-                                    <button class="btn">Book Now</button>
-                                </div>
+                            </div>
+                            <p class="desc lineclamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
+                            <div class="foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn book-btn">Book Now</button>
                             </div>
                         </div>
                     </div>
                     <div class="card-item">
-                        <img src="assets/img/card1.svg" alt="" class="thumb">
+                        <a href=""><img src="assets/img/card3.svg" alt="" class="thumb"></a>
                         <div class="info">
                             <div class="head">
-                                <h3 class="title">Basic web design</h3>
+                                <h3 class="title lineclamp break-all">Web App design</h3>
                                 <div class="rating">
                                     <img src="assets/img/Star.svg" alt="" class="start">
                                     <span class="value">4.5</span>
                                 </div>
-                                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
-                                <div class="foot">
-                                    <span class="price">$120.75</span>
-                                    <button class="btn">Book Now</button>
-                                </div>
+                            </div>
+                            <p class="desc lineclamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
+                            <div class="foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn book-btn">Book Now</button>
                             </div>
                         </div>
                     </div>
@@ -199,6 +199,30 @@
         </div>
 
 
+        <!-- feedback -->
+
+        <div class="feedback">
+            <div class="main-content">
+                <div class="feedback-list">
+                    <div class="feedback-item">
+                        <div class="info">
+                            <img src="" alt="">
+                            <p class="title">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img src="" alt="" class="open-quotes">
+                            <blockquote>Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Panal -->
     </main>
 </body>
