--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
 </head>
 
 <body>
+
     <!-- Header -->
-    <main style="height: 600px;">
-        <!-- Header -->
-        <div class="header fixed">
-            <div class="main-content">
-                <div class="body">
-                    <!-- Logo -->
-                    <img src="assets/img/logo.svg" class="logo" alt="Lesson.">
+    <div class="header fixed">
+        <div class="main-content">
+            <div class="body">
+                <!-- Logo -->
+                <img src="assets/img/logo.svg" class="logo" alt="Lesson.">
 
-                    <!-- Nav -->
-                    <nav class="nav">
-                        <ul>
-                            <li class="active"><a href="#!">Home</a></li>
-                            <li><a href="#!">Courses</a></li>
-                            <li><a href="#!">Pricing</a></li>
-                            <li><a href="#!">Reviews</a></li>
-                        </ul>
-                    </nav>
+                <!-- Nav -->
+                <nav class="nav">
+                    <ul>
+                        <li class="active"><a href="#!">Home</a></li>
+                        <li><a href="#!">Courses</a></li>
+                        <li><a href="#!">Pricing</a></li>
+                        <li><a href="#!">Reviews</a></li>
+                    </ul>
+                </nav>
 
-                    <!-- actions -->
-                    <div class="action">
-                        <a href="#!" class="btn sign-up-btn">Sign Up</a>
-                    </div>
+                <!-- actions -->
+                <div class="action">
+                    <a href="#!" class="btn sign-up-btn">Sign Up</a>
                 </div>
             </div>
         </div>
+    </div>
 
+    <main>
         <!-- Hero -->
         <div class="hero">
             <div class="main-content">
@@ -153,7 +153,8 @@
                                     <span class="value">4.5</span>
                                 </div>
                             </div>
-                            <p class="desc lineclamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
+                            <p class="desc lineclamp line-2 break-all">Get the best course, gain knowledge and shine for
+                                your future career.</p>
                             <div class="foot">
                                 <span class="price">$120.75</span>
                                 <button class="btn book-btn">Book Now</button>
@@ -170,7 +171,8 @@
                                     <span class="value">4.5</span>
                                 </div>
                             </div>
-                            <p class="desc lineclamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
+                            <p class="desc lineclamp line-2 break-all">Get the best course, gain knowledge and shine for
+                                your future career.</p>
                             <div class="foot">
                                 <span class="price">$120.75</span>
                                 <button class="btn book-btn">Book Now</button>
@@ -187,7 +189,8 @@
                                     <span class="value">4.5</span>
                                 </div>
                             </div>
-                            <p class="desc lineclamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
+                            <p class="desc lineclamp line-2 break-all">Get the best course, gain knowledge and shine for
+                                your future career.</p>
                             <div class="foot">
                                 <span class="price">$120.75</span>
                                 <button class="btn book-btn">Book Now</button>
@@ -200,31 +203,277 @@
 
 
         <!-- feedback -->
-
         <div class="feedback">
             <div class="main-content">
                 <div class="feedback-list">
                     <div class="feedback-item">
                         <div class="info">
-                            <img src="" alt="">
+                            <img src="assets/img/avatar1.avif" alt="" class="avatar">
                             <p class="title">Peter Moor</p>
                             <p class="desc">Student of Web Design</p>
                             <div class="dots">
                                 <span class="dot"></span>
-                                <span class="dot"></span>
+                                <span class="dot active"></span>
                                 <span class="dot"></span>
                             </div>
                         </div>
                         <div class="content">
-                            <img src="" alt="" class="open-quotes">
-                            <blockquote>Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                            <img src="assets/img/Vectorquote.svg" alt="" class="open-quotes">
+                            <blockquote>Not only does my resume look impressive—filled with the names and logos of
+                                world-class institutions—but these certificates also bring me closer to my career goals
+                                by validating the skills I've learned." </blockquote>
+                        </div>
+                    </div>
+                    <div class="feedback-item">
+                        <div class="info">
+                            <img src="assets/img/avatar2.avif" alt="" class="avatar">
+                            <p class="title">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot"></span>
+                                <span class="dot active"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img src="assets/img/Vectorquote.svg" alt="" class="open-quotes">
+                            <blockquote>Not only does my resume look impressive—filled with the names and logos of
+                                world-class institutions—but these certificates also bring me closer to my career goals
+                                by validating the skills I've learned." </blockquote>
+                        </div>
+                    </div>
+                    <div class="feedback-item">
+                        <div class="info">
+                            <img src="assets/img/avatar3.avif" alt="" class="avatar">
+                            <p class="title">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot"></span>
+                                <span class="dot active"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img src="assets/img/Vectorquote.svg" alt="" class="open-quotes">
+                            <blockquote>Not only does my resume look impressive—filled with the names and logos of
+                                world-class institutions—but these certificates also bring me closer to my career goals
+                                by validating the skills I've learned." </blockquote>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Panal -->
+
+        <!-- futures 1-->
+        <div class="futures">
+            <div class="main-content">
+                <div class="body">
+                    <div class="images">
+                        <img src="assets/img/future1.avif" alt="" class="lower">
+                        <img src="assets/img/future2.avif" alt="">
+                    </div>
+
+                    <div class="content">
+                        <h2 class="heading lv2">
+                            Learner outcomes through our awesome platform
+                        </h2>
+                        <p class="desc">
+                            87% of people learning for professional development report career benefits like getting a
+                            promotion, a raise, or starting a new career.
+                        </p>
+                        <p class="desc">Lesson Impact Report (2022)</p>
+
+                        <a href="#!" class="btn cta-btn">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- futures 2-->
+        <div class="futures futures-2">
+            <div class="main-content">
+                <div class="body">
+                    <div class="images">
+                        <img src="assets/img/future3.avif" alt="">
+                    </div>
+
+                    <div class="content">
+                        <h2 class="heading lv2">
+                            Take the next step toward your personal and professional goals with Lesson.
+                        </h2>
+                        <p class="desc">
+                            Take the next step toward. Join now to receive personalized and more recommendations from
+                            the full Coursera catalog.
+                        </p>
+
+                        <a href="#!" class="btn cta-btn">Join Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- our blog -->
+        <div class="blog">
+            <div class="main-content">
+                <div class="blog-top">
+                    <h2 class="heading lv2">Our blog</h2>
+                    <p class="desc line-2">Read our regular travel blog and know the latest update of tour and travel
+                    </p>
+                </div>
+
+                <div class="blog-list">
+                    <div class="blog-item">
+                        <img src="assets/img/blog1.avif" alt="" class="thumb">
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"> How to become a pro web designer in 2022 and get remot job?</a>
+                            </h3>
+                            <a href="#!" class="btn cta-btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <img src="assets/img/blog2.avif" alt="" class="thumb">
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"> How to become a pro web designer in 2022 and get remot job?</a>
+                            </h3>
+                            <a href="#!" class="btn cta-btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <img src="assets/img/blog3.avif" alt="" class="thumb">
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"> How to become a pro web designer in 2022 and get remot job?</a>
+                            </h3>
+                            <a href="#!" class="btn cta-btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <img src="assets/img/blog1.avif" alt="" class="thumb">
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"> How to become a pro web designer in 2022 and get remot job?</a>
+                            </h3>
+                            <a href="#!" class="btn cta-btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <img src="assets/img/blog2.avif" alt="" class="thumb">
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"> How to become a pro web designer in 2022 and get remot job?</a>
+                            </h3>
+                            <a href="#!" class="btn cta-btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <img src="assets/img/blog3.avif" alt="" class="thumb">
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"> How to become a pro web designer in 2022 and get remot job?</a>
+                            </h3>
+                            <a href="#!" class="btn cta-btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <img src="assets/img/blog1.avif" alt="" class="thumb">
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"> How to become a pro web designer in 2022 and get remot job?</a>
+                            </h3>
+                            <a href="#!" class="btn cta-btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <img src="assets/img/blog2.avif" alt="" class="thumb">
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"> How to become a pro web designer in 2022 and get remot job?</a>
+                            </h3>
+                            <a href="#!" class="btn cta-btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+                        <img src="assets/img/blog3.avif" alt="" class="thumb">
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"> How to become a pro web designer in 2022 and get remot job?</a>
+                            </h3>
+                            <a href="#!" class="btn cta-btn">Read More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dot-list">
+                    <span class="dot"></span>
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+        </div>
     </main>
+
+    <!-- footer -->
+    <footer class="footer">
+        <div class="main-content">
+            <div class="row">
+                <!-- column 1 -->
+                <div class="column">
+                    <img src="assets/icon/logo-white.svg" class="logo" alt="">
+                    <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot
+                        easier with us.</p>
+                    <div class="socials">
+                        <a href="#!"><img src="assets/icon/twitter.svg" alt="" class="icon"></a>
+                        <a href="#!"><img src="assets/icon/f.svg" alt="" class="icon"></a>
+                        <a href="#!"><img src="assets/icon/linked_in.svg" alt="" class="icon"></a>
+                        <a href="#!"><img src="assets/icon/instagram.svg" alt="" class="icon"></a>
+                    </div>
+                </div>
+                <!-- column 2 -->
+                <div class="column">
+                    <h3 class="title">Company</h3>
+                    <ul class="list">
+                        <li><a href="#!">About Us</a></li>
+                        <li><a href="#!">Features</a></li>
+                        <li><a href="#!">Our Pricing</a></li>
+                        <li><a href="#!">Latest News</a></li>
+                    </ul>
+                </div>
+                <!-- column 3 -->
+                <div class="column">
+                    <h3 class="title">Support</h3>
+                    <ul class="list">
+                        <li><a href="#!">FAQ’s</a></li>
+                        <li><a href="#!">Terms & Conditions</a></li>
+                        <li><a href="#!">Privacy Policy</a></li>
+                        <li><a href="#!">Contact Us</a></li>
+                    </ul>
+                </div>
+                <!-- column 4 -->
+                <div class="column">
+                    <h3 class="title">Address</h3>
+                    <ul class="list">
+                        <li><a href="#!"><strong>Location:</strong> 27 Division St, New York, NY 10002, USA</a></li>
+                        <li><a href="#!"><strong>Email:</strong> email@gmail.com</a></li>
+                        <li><a href="#!"><strong>Phone:</strong> + 000 1234 567 890</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <p class="copyright">Copyright ©2022 webdesign.gdn All rights reserved</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
