--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- reset css -->
-    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <!-- styles css -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/./assets/css/style.css">
     <!-- Font google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
         <div class="main-content">
             <div class="body">
                 <!-- Logo -->
-                <img src="assets/img/logo.svg" class="logo" alt="Lesson.">
+                <img src="././assets/img/logo.svg" class="logo" alt="Lesson.">
 
                 <!-- Nav -->
                 <nav class="nav">
@@ -52,11 +52,11 @@
                 <div class="body">
                     <!-- hero left -->
                     <div class="media-block">
-                        <img src="assets/img/img-media.jpg" class="img" alt="">
+                        <img src="././assets/img/img-media.jpg" class="img" alt="">
                         <div class="hero-sumary">
                             <div class="item">
                                 <div class="icon">
-                                    <img src="assets/icon/Orion_page.svg" alt="">
+                                    <img src="./assets/icon/Orion_page.svg" alt="">
                                 </div>
 
                                 <div class="info">
@@ -66,7 +66,7 @@
                             </div>
                             <div class="item">
                                 <div class="icon">
-                                    <img src="assets/icon/Orion_code-window.svg" alt="">
+                                    <img src="./assets/icon/Orion_code-window.svg" alt="">
                                 </div>
 
                                 <div class="info">
@@ -76,7 +76,7 @@
                             </div>
                             <div class="item">
                                 <div class="icon">
-                                    <img src="assets/icon/Orion_megaphone.svg" alt="">
+                                    <img src="./assets/icon/Orion_megaphone.svg" alt="">
                                 </div>
 
                                 <div class="info">
@@ -97,7 +97,7 @@
                             <a href="" class="btn hero-cta">See Courses</a>
                             <button class="watch-video">
                                 <div class="icon">
-                                    <img src="assets/icon/Polygon 2.svg" alt="">
+                                    <img src="././assets/icon/Polygon 2.svg" alt="">
                                 </div>
                                 <span>Watch Video</span>
                             </button>
@@ -144,12 +144,12 @@
                 <!-- cousers -->
                 <div class="card">
                     <div class="card-item">
-                        <a href=""><img src="assets/img/card1.svg" alt="" class="thumb"></a>
+                        <a href=""><img src="./assets/img/card1.svg" alt="" class="thumb"></a>
                         <div class="info">
                             <div class="head">
                                 <h3 class="title lineclamp break-all">Basic web design</h3>
                                 <div class="rating">
-                                    <img src="assets/img/Star.svg" alt="" class="start">
+                                    <img src="./assets/img/Star.svg" alt="" class="start">
                                     <span class="value">4.5</span>
                                 </div>
                             </div>
@@ -162,12 +162,12 @@
                         </div>
                     </div>
                     <div class="card-item">
-                        <a href=""><img src="assets/img/card2.svg" alt="" class="thumb"></a>
+                        <a href=""><img src="./assets/img/card2.svg" alt="" class="thumb"></a>
                         <div class="info">
                             <div class="head">
                                 <h3 class="title lineclamp break-all">UI/UX design</h3>
                                 <div class="rating">
-                                    <img src="assets/img/Star.svg" alt="" class="start">
+                                    <img src="./assets/img/Star.svg" alt="" class="start">
                                     <span class="value">4.5</span>
                                 </div>
                             </div>
@@ -180,12 +180,12 @@
                         </div>
                     </div>
                     <div class="card-item">
-                        <a href=""><img src="assets/img/card3.svg" alt="" class="thumb"></a>
+                        <a href=""><img src="./assets/img/card3.svg" alt="" class="thumb"></a>
                         <div class="info">
                             <div class="head">
                                 <h3 class="title lineclamp break-all">Web App design</h3>
                                 <div class="rating">
-                                    <img src="assets/img/Star.svg" alt="" class="start">
+                                    <img src="./assets/img/Star.svg" alt="" class="start">
                                     <span class="value">4.5</span>
                                 </div>
                             </div>
@@ -208,7 +208,7 @@
                 <div class="feedback-list">
                     <div class="feedback-item">
                         <div class="info">
-                            <img src="assets/img/avatar1.avif" alt="" class="avatar">
+                            <img src="./assets/img/avatar1.avif" alt="" class="avatar">
                             <p class="title">Peter Moor</p>
                             <p class="desc">Student of Web Design</p>
                             <div class="dots">
@@ -218,7 +218,7 @@
                             </div>
                         </div>
                         <div class="content">
-                            <img src="assets/img/Vectorquote.svg" alt="" class="open-quotes">
+                            <img src="./assets/img/Vectorquote.svg" alt="" class="open-quotes">
                             <blockquote>Not only does my resume look impressive—filled with the names and logos of
                                 world-class institutions—but these certificates also bring me closer to my career goals
                                 by validating the skills I've learned." </blockquote>
@@ -226,7 +226,7 @@
                     </div>
                     <div class="feedback-item">
                         <div class="info">
-                            <img src="assets/img/avatar2.avif" alt="" class="avatar">
+                            <img src="./assets/img/avatar2.avif" alt="" class="avatar">
                             <p class="title">Peter Moor</p>
                             <p class="desc">Student of Web Design</p>
                             <div class="dots">
@@ -236,7 +236,7 @@
                             </div>
                         </div>
                         <div class="content">
-                            <img src="assets/img/Vectorquote.svg" alt="" class="open-quotes">
+                            <img src="./assets/img/Vectorquote.svg" alt="" class="open-quotes">
                             <blockquote>Not only does my resume look impressive—filled with the names and logos of
                                 world-class institutions—but these certificates also bring me closer to my career goals
                                 by validating the skills I've learned." </blockquote>
@@ -244,7 +244,7 @@
                     </div>
                     <div class="feedback-item">
                         <div class="info">
-                            <img src="assets/img/avatar3.avif" alt="" class="avatar">
+                            <img src="./assets/img/avatar3.avif" alt="" class="avatar">
                             <p class="title">Peter Moor</p>
                             <p class="desc">Student of Web Design</p>
                             <div class="dots">
@@ -254,7 +254,7 @@
                             </div>
                         </div>
                         <div class="content">
-                            <img src="assets/img/Vectorquote.svg" alt="" class="open-quotes">
+                            <img src="./assets/img/Vectorquote.svg" alt="" class="open-quotes">
                             <blockquote>Not only does my resume look impressive—filled with the names and logos of
                                 world-class institutions—but these certificates also bring me closer to my career goals
                                 by validating the skills I've learned." </blockquote>
@@ -269,8 +269,8 @@
             <div class="main-content">
                 <div class="body">
                     <div class="images">
-                        <img src="assets/img/future1.avif" alt="" class="lower">
-                        <img src="assets/img/future2.avif" alt="">
+                        <img src="./assets/img/future1.avif" alt="" class="lower">
+                        <img src="./assets/img/future2.avif" alt="">
                     </div>
 
                     <div class="content">
@@ -294,7 +294,7 @@
             <div class="main-content">
                 <div class="body">
                     <div class="images">
-                        <img src="assets/img/future3.avif" alt="">
+                        <img src="./assets/img/future3.avif" alt="">
                     </div>
 
                     <div class="content">
@@ -323,7 +323,7 @@
 
                 <div class="blog-list">
                     <div class="blog-item">
-                        <img src="assets/img/blog1.avif" alt="" class="thumb">
+                        <img src="./assets/img/blog1.avif" alt="" class="thumb">
                         <div class="info">
                             <span class="date">21 November 2021</span>
                             <h3 class="title">
@@ -333,7 +333,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="assets/img/blog2.avif" alt="" class="thumb">
+                        <img src="./assets/img/blog2.avif" alt="" class="thumb">
                         <div class="info">
                             <span class="date">21 November 2021</span>
                             <h3 class="title">
@@ -343,7 +343,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="assets/img/blog3.avif" alt="" class="thumb">
+                        <img src="./assets/img/blog3.avif" alt="" class="thumb">
                         <div class="info">
                             <span class="date">21 November 2021</span>
                             <h3 class="title">
@@ -353,7 +353,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="assets/img/blog1.avif" alt="" class="thumb">
+                        <img src="./assets/img/blog1.avif" alt="" class="thumb">
                         <div class="info">
                             <span class="date">21 November 2021</span>
                             <h3 class="title">
@@ -363,7 +363,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="assets/img/blog2.avif" alt="" class="thumb">
+                        <img src="./assets/img/blog2.avif" alt="" class="thumb">
                         <div class="info">
                             <span class="date">21 November 2021</span>
                             <h3 class="title">
@@ -373,7 +373,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="assets/img/blog3.avif" alt="" class="thumb">
+                        <img src="./assets/img/blog3.avif" alt="" class="thumb">
                         <div class="info">
                             <span class="date">21 November 2021</span>
                             <h3 class="title">
@@ -383,7 +383,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="assets/img/blog1.avif" alt="" class="thumb">
+                        <img src="./assets/img/blog1.avif" alt="" class="thumb">
                         <div class="info">
                             <span class="date">21 November 2021</span>
                             <h3 class="title">
@@ -393,7 +393,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="assets/img/blog2.avif" alt="" class="thumb">
+                        <img src="./assets/img/blog2.avif" alt="" class="thumb">
                         <div class="info">
                             <span class="date">21 November 2021</span>
                             <h3 class="title">
@@ -403,7 +403,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="assets/img/blog3.avif" alt="" class="thumb">
+                        <img src="./assets/img/blog3.avif" alt="" class="thumb">
                         <div class="info">
                             <span class="date">21 November 2021</span>
                             <h3 class="title">
@@ -429,14 +429,14 @@
             <div class="row">
                 <!-- column 1 -->
                 <div class="column">
-                    <img src="assets/icon/logo-white.svg" class="logo" alt="">
+                    <img src="./assets/icon/logo-white.svg" class="logo" alt="">
                     <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot
                         easier with us.</p>
                     <div class="socials">
-                        <a href="#!"><img src="assets/icon/twitter.svg" alt="" class="icon"></a>
-                        <a href="#!"><img src="assets/icon/f.svg" alt="" class="icon"></a>
-                        <a href="#!"><img src="assets/icon/linked_in.svg" alt="" class="icon"></a>
-                        <a href="#!"><img src="assets/icon/instagram.svg" alt="" class="icon"></a>
+                        <a href="#!"><img src="./assets/icon/twitter.svg" alt="" class="icon"></a>
+                        <a href="#!"><img src="./assets/icon/f.svg" alt="" class="icon"></a>
+                        <a href="#!"><img src="./assets/icon/linked_in.svg" alt="" class="icon"></a>
+                        <a href="#!"><img src="./assets/icon/instagram.svg" alt="" class="icon"></a>
                     </div>
                 </div>
                 <!-- column 2 -->
