--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- reset css -->
     <link rel="stylesheet" href="./assets/css/reset.css">
     <!-- styles css -->
-    <link rel="stylesheet" href="/./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Font google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
